Checked all files for errors

--- a/about.html
+++ b/about.html
@@ -2,30 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>About</title>
+    <title>Martha's Crochet-About</title>
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   </head>
 
   <body>
   <header>
-    <nav class="navigation">
+    <nav class="header nav a">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="crafts.html">Crafts</a>
     <a href="contact.html">Contact</a>
     </nav>
   </header>
-  <footer>
-    <ul>
-      <li>MG Crochet</li>
-      <li>Martha Gates</li>
-      <li>Email:info@marthagates.com</li>
-      <li>Phone: 828-CROCHET</li>
-    </ul>
 
-    <img src="images/facebook.png" alt="facebook logo" height="48" width="48" class="icons">
-    <img src="images/twitter.png" alt="twitter logo" height="48" width="48" class="icons">
-    <img src="images/youtube.png" alt="youtube logo" height="48" width="48" class="icons">
+<main>
+  <h2>What is crochet about?</h2>
+
+  <p>Crochet is good way to relax while making useful and beautiful creations.</p>
+
+  <figure>
+  <img src="images/crochet.jpg" alt="photo of hand with crochet hook and yarn" width="400" height="267" />
+  <br />
+  <figcaption>Crocheting can be easy if you use the right sized hook for the yarn type.</figcaption>
+  </figure>
+
+<h3>Types of crochet stitches</h3>
+
+<ul>
+  <li>single crochet</li>
+  <li>half-double crochet</li>
+  <li>double crochet</li>
+  <li>treble crochet</li>
+  <li>slip stitch</li>
+</ul>
+
+</main>
+
+
+<footer>
+  <p>Martha's Crochet • Email:info@marthagates.com • Phone: 828-CROCHET</p>
   </footer>
+  </body>
+  </html>
