--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>Martha's Crochet</title>
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   </head>
 
   <body>
   <header>
-    <nav class="navigation">
+    <nav class="header nav a">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="crafts.html">Crafts</a>
@@ -20,28 +20,19 @@
 
 <main>
   <div>
-  <h1>Welcome MG Crochet</h1>
-  <img src="images/logo.png" alt="mgcrochet" height="95" width="113">
+  <h1>Welcome</h1>
+  <img src="images/logo.png" alt="marthacrochet" height="69" width="235">
 </div>
   <hr />
 <div class="yarn">
 
   <img src="images/yarn.jpg" alt="bundles of yarn" height="650" width="1000">
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<span class="lorem"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p class="intro">This is a website for crocheters who don't need to take it all so seriously.<span class="lorem"> I am here to share tips, what I have created, and to work with you.</span> Please look around and enjoy the information.</p>
 </div>
 
     <footer>
-      <ul>
-        <li>MG Crochet</li>
-        <li>Martha Gates</li>
-        <li>Email:info@marthagates.com</li>
-        <li>Phone: 828-CROCHET</li>
-      </ul>
-
-      <img src="images/facebook.png" alt="facebook logo" height="48" width="48" class="icons">
-      <img src="images/twitter.png" alt="twitter logo" height="48" width="48" class="icons">
-      <img src="images/youtube.png" alt="youtube logo" height="48" width="48" class="icons">
+      <p>Martha's Crochet • Email:info@marthagates.com • Phone: 828-CROCHET</p>
     </footer>
   </main>
   </body>
