--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact Us</title>
+    <title>Martha's Crochet-Contact Us</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <meta charset="utf-8"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   </head>
 
   <body>
     <header>
-      <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="crafts.html">Crafts</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+      <nav class="header nav a">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="crafts.html">Crafts</a>
+      <a href="contact.html">Contact</a>
+      </nav>
     </header>
 
   <main>
     <section class="pseudo">
 
-      <h1>We Want to Know You</h1>
+      <h2>We Want to Know You</h2>
       <p>Please fill out the form below so we can better serve you.</p>
     </section>
 
@@ -94,16 +93,7 @@
   </div>
 </main>
 <footer>
-  <ul>
-    <li>MG Crochet</li>
-    <li>Martha Gates</li>
-    <li>Email:info@marthagates.com</li>
-    <li>Phone: 828-CROCHET</li>
-  </ul>
-
-  <img src="images/facebook.png" alt="facebook logo" height="48" width="48" class="icons">
-  <img src="images/twitter.png" alt="twitter logo" height="48" width="48" class="icons">
-  <img src="images/youtube.png" alt="youtube logo" height="48" width="48" class="icons">
+  <p>Martha's Crochet • Email:info@marthagates.com • Phone: 828-CROCHET</p>
 </footer>
   </body>
 </html>
