--- a/crafts.html
+++ b/crafts.html
@@ -2,30 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Crafts</title>
+    <title>Martha's Crochet-Crafts</title>
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   </head>
 
   <body>
   <header>
-    <nav class="navigation">
+      <nav class="header nav a">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="crafts.html">Crafts</a>
     <a href="contact.html">Contact</a>
     </nav>
   </header>
-  <footer>
-    <ul>
-      <li>MG Crochet</li>
-      <li>Martha Gates</li>
-      <li>Email:info@marthagates.com</li>
-      <li>Phone: 828-CROCHET</li>
-    </ul>
 
-    <img src="images/facebook.png" alt="facebook logo" height="48" width="48" class="icons">
-    <img src="images/twitter.png" alt="twitter logo" height="48" width="48" class="icons">
-    <img src="images/youtube.png" alt="youtube logo" height="48" width="48" class="icons">
+  <main>
+
+
+  <img src="images/sweater.jpg" alt="photo of 2 white sweaters and one gray one" width="249" height="306" />
+    <img src="images/blanket.jpeg" alt="photo of blue blanket on a fence" width="403" height="302" />
+
+    <p class="craft">These are some of the crafts that can be made with just yarn, a crochet hook, and lots of time. Don't be fooled by the complexity of the appearance. Many of the items that can be made are just a few simple stitches but are all about following a pattern.<p>
+
+</main>
+
+    <footer>
+      <p>Martha's Crochet • Email:info@marthagates.com • Phone: 828-CROCHET</p>
   </footer>
+</body>
+</html>
